--- a/exemplos.ipynb
+++ b/exemplos.ipynb
@@ -46,6 +46,48 @@
     "# Para relacionar uma constante usamos o nome da variável em maiúscula\n",
     "# Para relacionar uma variável usamos o nome da variável em minúscula"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[112, 173, 184, 110, 163, 139, 49, 109, 103, 27, 79, 99]\n",
+      "[10, 175, 62, 194, 130, 147, 50, 8, 157, 45, 79, 197]\n",
+      "[125, 102, 108, 147, 105, 35, 10, 111, 186, 76, 19, 57]\n",
+      "[21, 67, 43, 6, 13, 151, 83, 167, 158, 55, 64, 66]\n",
+      "[56, 195, 165, 173, 162, 26, 141, 28, 84, 16, 69, 105]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "\n",
+    "def get_data():\n",
+    "    linhas = 5\n",
+    "    colunas = 12\n",
+    "    \n",
+    "    elementos = []\n",
+    "    \n",
+    "    for l in range(linhas):\n",
+    "        linha = []\n",
+    "        for c in range(colunas):\n",
+    "            elemento = randint(1, 200)\n",
+    "            linha.append(elemento)\n",
+    "        elementos.append(linha)\n",
+    "\n",
+    "\n",
+    "    for elemento in elementos:\n",
+    "        \n",
+    "\n",
+    "\n",
+    "get_data()"
+   ]
   }
  ],
  "metadata": {
